[package]
name = "lolzteam"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust API wrapper for Lolzteam Forum and Market"
keywords = ["lolzteam", "api", "forum", "market"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync"] }
thiserror = "1"
async-trait = "0.1"
fastrand = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.5"
